Closed
Bug 1638441
Opened 5 years ago
Closed 5 years ago
Unable to dismiss the cookie agreement prompt on welcome.playkey.net
Categories
(Core :: Panning and Zooming, defect, P1)
Tracking
()
RESOLVED
FIXED
mozilla78
Tracking | Status | |
---|---|---|
firefox-esr68 | --- | unaffected |
firefox76 | --- | unaffected |
firefox77 | --- | unaffected |
firefox78 | --- | fixed |
People
(Reporter: ksenia, Assigned: botond)
References
(Regression, )
Details
(Keywords: regression)
Attachments
(1 file)
This was initially reported in https://github.com/webcompat/web-bugs/issues/52955
Steps to reproduce:
- In Firefox Preview Nightly visit https://welcome.playkey.net/en/lp/intro-ww-quiz-offer/
- Try to to dismiss the cookie agreement prompt at the bottom of the page by clicking on "Agree"
Expected:
The prompt is dismissed
Actual:
Nothing happens
This is also reproducible on RDM.
From mozregression:
7:52.69 INFO: Last good revision: d3b0b878f7c1a2e758dda0953c19ab9831e694c1
7:52.69 INFO: First bad revision: cd5ab4e2f7a8a376bd001583cd5b6dc8b0abd17c
7:52.69 INFO: Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=d3b0b878f7c1a2e758dda0953c19ab9831e694c1&tochange=cd5ab4e2f7a8a376bd001583cd5b6dc8b0abd17c
(This could be related to https://bugzilla.mozilla.org/show_bug.cgi?id=1637113 , however in this case I didn't need to perform pinch and zoom to reproduce the issue)
Assignee | ||
Comment 2•5 years ago
|
||
Yes, thanks for the report!
I can reproduce this and confirm that it's not fixed by bug 1637113.
Assignee: nobody → botond
Blocks: 1630393
Severity: -- → S2
status-firefox76:
--- → unaffected
status-firefox77:
--- → unaffected
status-firefox78:
--- → affected
status-firefox-esr68:
--- → unaffected
Flags: needinfo?(botond)
Priority: -- → P1
Regressed by: 1556556
Updated•5 years ago
|
Has Regression Range: --- → yes
Reporter | ||
Updated•5 years ago
|
Reporter | ||
Updated•5 years ago
|
Assignee | ||
Comment 3•5 years ago
|
||
The rects need to be transformed already by the time they are
used in MarkOutOfFlowFrameForDisplay() to see if the out of
flow frame intersects them.
Pushed by bballo@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/d170492d0bb1
Apply the visual-to-layout transform earlier in MarkFramesForDisplayList(). r=tnikkel
Comment 5•5 years ago
|
||
A follow up to get a test for this would be great.
![]() |
||
Comment 6•5 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla78
You need to log in
before you can comment on or make changes to this bug.
Description
•