Bug 1638441 - Apply the visual-to-layout transform earlier in MarkFramesForDisplayList(). r=tnikkel

The rects need to be transformed already by the time they are
used in MarkOutOfFlowFrameForDisplay() to see if the out of
flow frame intersects them.

Differential Revision: https://phabricator.services.mozilla.com/D75664